# aws-init-container

./: Cargo.toml  Dockerfile  LICENSE  README.md  build  compose.yaml
src/: cli.rs  config.rs  main.rs  provisioner.rs
